Fix section height spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -59,7 +59,7 @@ main {
 }
 
 section {
-  margin-bottom: 10vw;
+  margin-bottom: 2vh;
   // scroll-snap-align: center;
   // align-items: center;
   // height: 100vh;
